--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta name="description" content="Mistérios FazBear - Explore a fundo teorias, segredos e a lore completa do universo de Five Nights at Freddy’s. Análises de jogos, livros e filmes.">
   <meta name="keywords" content="FNAF, Five Nights at Freddy's, Lore, Teorias, Mistérios FazBear, William Afton, Golden Freddy">
   <title>Mistérios FazBear - Desvendando a Lore de FNAF</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="style.css">
   <link rel="icon" href="img/favicon.png" type="image/png">
 </head>
 <body>
