--- a/quemsomos.html
+++ b/quemsomos.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Conheça a equipe do Mistérios FazBear, fãs dedicados a desvendar todos os segredos do universo de Five Nights at Freddy's.">
   <title>Quem Somos - Mistérios FazBear</title>
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="style.css">
   <link rel="icon" href="img/favicon.png" type="image/png">
 </head>
 <body>
