--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <header class="navbar">
   <div class="logo">
     <a href="index.html">
-      <img src="img/logo.png" alt="Logo Mistérios FazBear">
+      <img src="logo.png" alt="Logo Mistérios FazBear">
     </a>
   </div>
   <nav class="menu" aria-label="Navegação principal">
@@ -32,7 +32,7 @@
     <main>
       <section>
     <div class="banner-content">
-      <img src="img/banner.webp" alt="banner inicial">
+      <img src="banner.webp" alt="banner inicial">
       <h1>Os segredos da Freddy Fazbear’s Pizza aguardam por você...</h1>
     </div>
   </section>
@@ -46,7 +46,7 @@
         <h2 id="frases-teorias-titulo">Teorias</h2>
         <div class="cards-container">
           <article class="card">
-            <img src="img/tunel.jpg" alt="Corredor escuro com uma luz no fim.">
+            <img src="tunel.jpg" alt="Corredor escuro com uma luz no fim.">
             <div class="card-content">
               <h3>“Não confie na escuridão...”</h3>
               <p>Uma análise sobre os segredos escondidos nos jogos originais.</p>
@@ -54,7 +54,7 @@
             </div>
           </article>
           <article class="card">
-            <img src="img/camera.webp" alt="Câmera de segurança com estática.">
+            <img src="camera.webp" alt="Câmera de segurança com estática.">
             <div class="card-content">
               <h3>“Cada noite é um enigma.”</h3>
               <p>Explorando o mistério por trás das gravações de segurança.</p>
@@ -62,7 +62,7 @@
             </div>
           </article>
           <article class="card">
-            <img src="img/foto-antiga.jpg" alt="Pixel art de um minigame antigo.">
+            <img src="foto-antiga.jpg" alt="Pixel art de um minigame antigo.">
             <div class="card-content">
               <h3>“O silêncio fala mais alto.”</h3>
               <p>Teorias sobre as vozes ocultas e os sons nos minigames.</p>
@@ -77,7 +77,7 @@
         <div class="materias-grid">
           <article class="materia-post">
             <figure>
-              <img src="img/golden-freddy.jpg" alt="Imagem enigmática de Golden Freddy.">
+              <img src="golden-freddy.jpg" alt="Imagem enigmática de Golden Freddy.">
             </figure>
             <h3>O enigma de Golden Freddy</h3>
             <p>Teorias e segredos sobre a mais misteriosa entidade de FNAF.</p>
@@ -85,7 +85,7 @@
           </article>
           <article class="materia-post">
             <figure>
-              <img src="img/afton.jpg" alt="Silhueta de William Afton com um fundo roxo.">
+              <img src="afton.jpg" alt="Silhueta de William Afton com um fundo roxo.">
             </figure>
             <h3>A história de William Afton</h3>
             <p>O criador da tragédia por trás dos animatrônicos.</p>
@@ -93,7 +93,7 @@
           </article>
           <article class="materia-post">
             <figure>
-              <img src="img/filme-foto.jpg" alt="Pôster do filme de Five Nights at Freddy's.">
+              <img src="filme-foto.jpg" alt="Pôster do filme de Five Nights at Freddy's.">
             </figure>
             <h3>Os segredos do Filme de FNAF</h3>
             <p>Entenda o final do primeiro filme.</p>
