--- a/contato.html
+++ b/contato.html
@@ -4,14 +4,14 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Contato - Mistérios FazBear</title>
-  <link rel="stylesheet" href="css/style.css">
-  <link rel="icon" href="img/favicon.png" type="image/png">
+  <link rel="stylesheet" href="style.css">
+  <link rel="icon" href="favicon.png" type="image/png">
 </head>
 <body>
   <header class="navbar">
   <div class="logo">
     <a href="index.html">
-      <img src="img/logo.png" alt="Logo Mistérios FazBear">
+      <img src="logo.png" alt="Logo Mistérios FazBear">
     </a>
   </div>
   <nav class="menu" aria-label="Navegação principal">
