--- a/contato.html
+++ b/contato.html
@@ -25,13 +25,6 @@
   </nav>
   <button class="menu-toggle" aria-label="Abrir menu" aria-expanded="false">☰</button>
 </header>
-  
-<div id="cookie-banner">
-    <div class="cookie-content">
-        <p>Este site utiliza cookies para garantir a melhor experiência de navegação e análise de dados. Ao continuar, você concorda com a nossa <a href="politicadeprivacidade.html" target="_blank">Política de Privacidade</a>.</p>
-        <button id="accept-cookies">Aceitar e Fechar</button>
-    </div>
-</div>
 
   <main class="content-page">
     <div class="contact-container">
@@ -91,6 +84,11 @@
       <p class="signature">© 2025 Mistérios FazBear. Todos os direitos reservados.</p>
     </div>
   </footer>
+
+  <div class="cookies" id="cookie-banner" role="alert">
+    <p>Usamos cookies para melhorar sua experiência. Ao continuar a navegar, você concorda com a nossa <a href="politicadeprivacidade.html">Política de Privacidade</a>.</p>
+    <button id="accept-cookies">Aceitar</button>
+  </div>
   
   <script src="js/script.js"></script>
 </body>
