--- a/termodeuso.html
+++ b/termodeuso.html
@@ -10,7 +10,7 @@
     <header class="navbar">
     <div class="logo">
         <a href="index.html">
-      <img src="img/logo.png" alt="Logo Mistérios FazBear">
+      <img src="logo.png" alt="Logo Mistérios FazBear">
         </a>
     </div>
   <nav class="menu" aria-label="Navegação principal">
