--- a/pagina1.html
+++ b/pagina1.html
@@ -11,7 +11,7 @@
     <header class="navbar">
         <div class="logo">
             <a href="index.html">
-                <img src="img/logo.png" alt="Logo Mistérios FazBear">
+                <img src="logo.png" alt="Logo Mistérios FazBear">
             </a>
         </div>
         <nav class="menu" aria-label="Navegação principal">
@@ -85,3 +85,4 @@
 </body>
 
 </html>
+
