--- a/golden.html
+++ b/golden.html
@@ -11,7 +11,7 @@
     <header class="navbar">
         <div class="logo">
             <a href="index.html">
-                <img src="img/logo.png" alt="Logo Mistérios FazBear">
+                <img src="logo.png" alt="Logo Mistérios FazBear">
             </a>
         </div>
         <nav class="menu" aria-label="Navegação principal">
@@ -99,4 +99,5 @@
         </aside>
     </div>
 </body>
+
 </html>
