--- a/contato.html
+++ b/contato.html
@@ -90,6 +90,6 @@
     <button id="accept-cookies">Aceitar</button>
   </div>
   
-  <script src="js/script.js"></script>
+  <script src="script.js"></script>
 </body>
 </html>
